# StreamChatBox

./: README.md  badge_documentation.txt  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: badges.rs  main.rs
src/components/: APIKeysWindow.css  APIKeysWindow.tsx  ActivityFeed.css  ActivityFeed.tsx  ActivityItem.css  ActivityItem.tsx  ChatBox.css  ChatBox.tsx  DockableLayout.css  DockableLayout.tsx  MessageContent.css  MessageContent.tsx  SendMessageBox.css  SendMessageBox.tsx  SettingsPanel.css  SettingsPanel.tsx  Toolbar.css  Toolbar.tsx
