[package]
name = "streamchatbox"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-show", "window-unminimize", "window-unmaximize", "window-start-dragging", "window-set-size", "window-minimize", "window-hide", "window-close", "window-maximize", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
twitch_eventsub = "0.1.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
random_color = "1.0.0"
once_cell = "1.21.3"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
simple_env_load = "0.2.0"
colored = "3.0.0"
chrono = "0.4.40"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
